Update GEONODE_PROJ_DEV.md